major update: offline changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,11 +18,11 @@
         <img class="header_logo" src="images/general/logo.png" alt="CalcPrep Logo">
         <nav class="header_nav">
             <ul>
-                <li class="header_nav_li"><a class="header_nav_a" href="http://calcprep.com">Home</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="http://calcprep.com">Calculus 1/AB</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="http://calcprep.com">Calculus 2/BC</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="http://calcprep.com">Resources</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="http://calcprep.com">Connect</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../index.html">Home</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../html/calculus-1.html">Calculus 1/AB</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../html/calculus-2.html">Calculus 2/BC</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../html/resources.html">Resources</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../html/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +53,7 @@
         </article>
         <article class="main_content">
             <section class="main_content_header">
-                <h1>Lagrange Error Bounds</h1>
+                <h1>Home</h1>
             </section>
             <section class="main_content_body">
                 <p>Content</p>
@@ -77,15 +77,15 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
             </section>
         </article>
-        <article class="main_takeaways">
+        <article class="main_additional_info">
             <h2>Key Takeaways</h2>
         </articles>
     </main>
     <footer class="footer_container">
         <div class="footer_socials">
-            <a href="https://www.linkedin.com/in/zacharywilkerson/" class="fa-brands fa-linkedin" target="_blank" title="LinkedIn"></a>
-            <a href="https://github.com/zacharywilkerson/" class="fa-brands fa-instagram" target="_blank" title="Github"></a>
-            <a href="https://medium.com/@zacharykwilkerson/" class="fa-brands fa-youtube" target="_blank" title="Medium"></a>
+            <a href="https://www.linkedin.com/in/zacharywilkerson/" class="fa-brands fa-linkedin" target="_blank" rel="noopener noreferrer" title="LinkedIn"></a>
+            <a href="https://instagram.com/calcprep" class="fa-brands fa-instagram" target="_blank" rel="noopener noreferrer" title="Github"></a>
+            <a href="https://www.youtube.com/channel/UCaDLRJ4QoGCzbMfPLlk5CUw" class="fa-brands fa-youtube" target="_blank" rel="noopener noreferrer" title="Medium"></a>
         </div>
         <p class="footer_copyright">&copy; Zachary Wilkerson <span id="year">2022</span></p>
     </footer>
