attempting to fix links

--- a/html/calculus-2/daily-question/05-16-2022.html
+++ b/html/calculus-2/daily-question/05-16-2022.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../../../css/style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,14 +15,14 @@
 </head>
 <body>
     <header class="header_container">
-        <img class="header_logo" src="/images/general/logo.png" alt="CalcPrep Logo">
+        <img class="header_logo" src="../../../images/general/logo.png" alt="CalcPrep Logo">
         <nav class="header_nav">
             <ul>
-                <li class="header_nav_li"><a class="header_nav_a" href="/index.html">Home</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/html/calculus-1.html">Calculus 1/AB</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/html/calculus-2.html">Calculus 2/BC</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/html/resources.html">Resources</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/html/about.html">About</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../../index.html">Home</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../../calculus-1.html">Calculus 1/AB</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../../calculus-2.html">Calculus 2/BC</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../../resources.html">Resources</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../../about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -33,23 +33,23 @@
                 <ul class="main_nav_ul">
                     <li class="main_nav_li"><a class="main_nav_a" href="">Calculus 1/AB</a></li>
                     <nav class="main_directory_subnav">
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1/daily-question/daily-question.html">Question of the Day</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1/exam-review/exam-review.html">Exam Review</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Limits and Continuity</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Differentiation</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Differentiation</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Integration</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Integration</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1/daily-question/daily-question.html">Question of the Day</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1/exam-review/exam-review.html">Exam Review</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Limits and Continuity</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Differentiation</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Applications of Differentiation</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Integration</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Applications of Integration</a></li>
                     </nav>
                     <li class="main_nav_li"><a class="main_nav_a" href="">Calculus 2/BC</a></li>
                     <nav class="main_directory_subnav">
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2/daily-question/daily-question.html">Question of the Day</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2/exam-review/exam-review.html">Exam Review</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Integration</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Parametric Equations</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Polar Coordinates</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Vectors</a></li>
-                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Sequences and Series</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-2/daily-question/daily-question.html">Question of the Day</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-2/exam-review/exam-review.html">Exam Review</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Applications of Integration</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Parametric Equations</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Polar Coordinates</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Vectors</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="../../calculus-1.html">Sequences and Series</a></li>
                     </nav>
                 </ul>
             </nav>
