--- a/html/about.html
+++ b/html/about.html
@@ -32,7 +32,7 @@
             <h2>Topics</h2>
             <nav class="main_nav">
                 <ul class="main_nav_ul">
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Calculus 1/AB</a></li>
+                    <li class="main_nav_li"><a class="main_nav_a" href="calculus-1.html">Calculus 1/AB</a></li>
                     <nav class="main_directory_subnav">
                         <li class="main_subnav_li"><a class="main_subnav_a" href="/calculus-1/daily-question/daily-question.html">Question of the Day</a></li>
                         <li class="main_subnav_li"><a class="main_subnav_a" href="/calculus-1/exam-review/exam-review.html">Exam Review</a></li>
@@ -42,7 +42,7 @@
                         <li class="main_subnav_li"><a class="main_subnav_a" href="calculus-1.html">Integration</a></li>
                         <li class="main_subnav_li"><a class="main_subnav_a" href="calculus-1.html">Applications of Integration</a></li>
                     </nav>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Calculus 2/BC</a></li>
+                    <li class="main_nav_li"><a class="main_nav_a" href="calculus-2.html">Calculus 2/BC</a></li>
                     <nav class="main_directory_subnav">
                         <li class="main_subnav_li"><a class="main_subnav_a" href="/calculus-2/daily-question/daily-question.html">Question of the Day</a></li>
                         <li class="main_subnav_li"><a class="main_subnav_a" href="/calculus-2/exam-review/exam-review.html">Exam Review</a></li>
