--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,14 +15,14 @@
 </head>
 <body>
     <header class="header_container">
-        <img class="header_logo" src="images/general/logo.png" alt="CalcPrep Logo">
+        <img class="header_logo" src="/images/general/logo.png" alt="CalcPrep Logo">
         <nav class="header_nav">
             <ul>
-                <li class="header_nav_li"><a class="header_nav_a" href="../index.html">Home</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="../html/calculus-1.html">Calculus 1/AB</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="../html/calculus-2.html">Calculus 2/BC</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="../html/resources.html">Resources</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="../html/about.html">About</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="index.html">Home</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="/html/calculus-1.html">Calculus 1/AB</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="/html/calculus-2.html">Calculus 2/BC</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="/html/resources.html">Resources</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="/html/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -33,53 +33,73 @@
                 <ul class="main_nav_ul">
                     <li class="main_nav_li"><a class="main_nav_a" href="">Calculus 1/AB</a></li>
                     <nav class="main_directory_subnav">
-                        <li class="main_subnav_li">Limits</li>
-                        <li class="main_subnav_li">Derivatives</li>
-                        <li class="main_subnav_li">Integrals</li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1/daily-question/daily-question.html">Question of the Day</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1/exam-review/exam-review.html">Exam Review</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Limits and Continuity</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Differentiation</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Differentiation</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Integration</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Integration</a></li>
                     </nav>
                     <li class="main_nav_li"><a class="main_nav_a" href="">Calculus 2/BC</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Limits and Continuity</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Differentiation</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Applications of Differentiation</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Integration</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Differential Equations</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Applications of Integration</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Parametric Equations</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Polar Coordinates</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Vectors</a></li>
-                    <li class="main_nav_li"><a class="main_nav_a" href="">Sequences and Series</a></li>
+                    <nav class="main_directory_subnav">
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2/daily-question/daily-question.html">Question of the Day</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2/exam-review/exam-review.html">Exam Review</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Applications of Integration</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Parametric Equations</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Polar Coordinates</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Vectors</a></li>
+                        <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Sequences and Series</a></li>
+                    </nav>
                 </ul>
             </nav>
         </article>
         <article class="main_content">
             <section class="main_content_header">
-                <h1>Home</h1>
+                <h1>CalcPrep - Home</h1>
             </section>
             <section class="main_content_body">
-                <p>Content</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
-                    $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident optio cumque praesentium! Amet voluptatem modi deleniti esse repellendus iste animi delectus. Molestias voluptatem quisquam temporibus voluptate a, qui tempore odit?</p>
+                <article>
+                    <h2>Content Review</h2>
+                    <p>Content</p>
+                    <nav class="main_nav">
+                        <ul class="main_nav_ul">
+                            <li class="main_nav_li"><a class="main_nav_a" href="/html/calculus-1.html">Calculus 1/AB</a></li>
+                            <nav class="main_directory_subnav">
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1/daily-question/daily-question.html">Question of the Day</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1/exam-review/exam-review.html">Exam Review</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Limits and Continuity</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Differentiation</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Differentiation</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Integration</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-1.html">Applications of Integration</a></li>
+                            </nav>
+                            <li class="main_nav_li"><a class="main_nav_a" href="/html/calculus-2.html">Calculus 2/BC</a></li>
+                            <nav class="main_directory_subnav">
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2/daily-question/daily-question.html">Question of the Day</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2/exam-review/exam-review.html">Exam Review</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Applications of Integration</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Parametric Equations</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Polar Coordinates</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Vectors</a></li>
+                                <li class="main_subnav_li"><a class="main_subnav_a" href="/html/calculus-2.html">Sequences and Series</a></li>
+                            </nav>
+                        </ul>
+                    </nav>
+                </article>
+                <article>
+                    <h2>Question of the Day</h2>
+                    <p>Content</p>
+                </article>
+                <article>
+                    <h2>Exam Review</h2>
+                    <p>Content</p>
+                </article>
             </section>
         </article>
-        <article class="main_additional_info">
+        <!-- <article class="main_additional_info">
             <h2>Key Takeaways</h2>
-        </articles>
+        </articles> -->
     </main>
     <footer class="footer_container">
         <div class="footer_socials">
