relative path fixes

--- a/html/calculus-2/daily-question/05-16-2022.html
+++ b/html/calculus-2/daily-question/05-16-2022.html
@@ -18,7 +18,7 @@
         <img class="header_logo" src="../../../images/general/logo.png" alt="CalcPrep Logo">
         <nav class="header_nav">
             <ul>
-                <li class="header_nav_li"><a class="header_nav_a" href="../../index.html">Home</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="../../../index.html">Home</a></li>
                 <li class="header_nav_li"><a class="header_nav_a" href="../../calculus-1.html">Calculus 1/AB</a></li>
                 <li class="header_nav_li"><a class="header_nav_a" href="../../calculus-2.html">Calculus 2/BC</a></li>
                 <li class="header_nav_li"><a class="header_nav_a" href="../../resources.html">Resources</a></li>
