--- a/html/resources.html
+++ b/html/resources.html
@@ -19,10 +19,10 @@
         <nav class="header_nav">
             <ul>
                 <li class="header_nav_li"><a class="header_nav_a" href="../index.html">Home</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/calculus-1.html">Calculus 1/AB</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/calculus-2.html">Calculus 2/BC</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/resources.html">Resources</a></li>
-                <li class="header_nav_li"><a class="header_nav_a" href="/about.html">About</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="./calculus-1.html">Calculus 1/AB</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="./calculus-2.html">Calculus 2/BC</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="./resources.html">Resources</a></li>
+                <li class="header_nav_li"><a class="header_nav_a" href="./about.html">About</a></li>
             </ul>
         </nav>
     </header>
